--- a/Sports.html
+++ b/Sports.html
@@ -10,7 +10,7 @@
         <link href="Sports.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
         <script src="/static/script.js"></script>
-        
+        <script src="hamburger.js"></script>
 
 
         <!-- logo icon -->
@@ -20,11 +20,32 @@
         <meta name="description" content="Order online, view our menu, and learn more about Game Day Grill through our website!" />
     </head>
     <body>
+        <header>
+			<div class="grow">
+				<a id="logoB" href="index.html">
+					<img src = "imgs\logos\game-day-grill.ico" alt = "Game Day Grill Logo" class = "logo">
+				</a>
+				<p class="header-text">Game Day Grill</h1>
+			</div>
+			<div class="navbar-buttons spaced-row">
+				<a href="order.html" class="button sm" >Order Now</a>
+				<a href="menu.html" class="button sm">Menu</a>
+				<a href="locations.html" class="button sm">Locations</a>
+				<a href="events.html" class="button sm">Special Events</a>
+			</div>
+			<img id="hamburger-button" src="imgs/hamburger.webp">
+    	</header>
+		<div id="hamburger-menu">
+			<a href="order.html" class="navbar-button sm" >Order Now</a>
+			<a href="menu.html" class="navbar-button sm">Menu</a>
+			<a href="locations.html" class="navbar-button sm">Locations</a>
+			<a href="events.html" class="navbar-button sm">Special Events</a>
+		</div>
        <main>
         <h1 class = "header-text">SPORTS CALENDARS</h1>
         <div class="container">
         <div class="picturefour">
-                <a href = "https://www.detroitlions.com/schedule/" target="_blank"><img class="lions" src="imgs/sports-teams/lions.png" alt="Detroit Lions logo" width="250" height="250"></a>
+                <a href = "https://www.detroitlions.com/schedule/" target="_blank"><img class="lions" src="imgs/sports-teams/lions.webp" alt="Detroit Lions logo" width="250" height="250"></a>
                 <form action="https://www.detroitlions.com/schedule/">
                     <button type="submit" class="color-change-button">
                         CALENDAR
@@ -32,7 +53,7 @@
                 </form>
         </div>
         <div class="picturethree">
-                <a href = "https://www.espn.com/nhl/team/schedule/_/name/det" target="_blank"><img class ="red-wings" src="imgs/sports-teams/detroit-red-wings-logo.PNG" alt ="Red Wings Team" width="250" height="250"></a>
+                <a href = "https://www.espn.com/nhl/team/schedule/_/name/det" target="_blank"><img class ="red-wings" src="imgs/sports-teams/detroit-red-wings-logo.webp" alt ="Red Wings Team" width="250" height="250"></a>
                 <form action = "https://www.espn.com/nhl/team/schedule/_/name/det">
                     <button type="submit" class="color-change-button" >
                         CALENDAR
@@ -40,7 +61,7 @@
                 </form>
         </div>
         <div class="picturefive">
-                <a href = "https://www.espn.com/nba/team/schedule/_/name/det" target="_blank"><img class="pistons" src="imgs/sports-teams/detroit-pistons.png" alt= "detroit pistons" width="250" height="250"></a>
+                <a href = "https://www.espn.com/nba/team/schedule/_/name/det" target="_blank"><img class="pistons" src="imgs/sports-teams/detroit-pistons.webp" alt= "detroit pistons" width="250" height="250"></a>
                 <form action="https://www.espn.com/nba/team/schedule/_/name/det">
                     <button type="submit" class="color-change-button" >
                         CALENDAR
@@ -48,7 +69,7 @@
                 </form>
         </div>
         <div class="picturesix">
-                <a href = "https://www.mlb.com/tigers/schedule/2023/fullseason" target="_blank"><img class="detroit-tigers" src="imgs//sports-teams/detroit-tigers-logo.png" alt="Detroit Tigers" width="250" height="250"></a>
+                <a href = "https://www.mlb.com/tigers/schedule/2023/fullseason" target="_blank"><img class="detroit-tigers" src="imgs//sports-teams/detroit-tigers-logo.webp" alt="Detroit Tigers" width="250" height="250"></a>
                 <form action="https://www.mlb.com/tigers/schedule/2023/fullseason">
                     <button type="submit" class="color-change-button" >
                         CALENDAR
@@ -56,7 +77,7 @@
                 </form>
         </div>
         <div class="picture">
-                <a href= "https://msuspartans.com/sports/football/schedule/2023" target="_blank"><img class = "michigan-state" src="imgs/sports-teams/spartan-logo.png" alt="Michigan State Logo"
+                <a href= "https://msuspartans.com/sports/football/schedule/2023" target="_blank"><img class = "michigan-state" src="imgs/sports-teams/spartan-logo.webp" alt="Michigan State Logo"
                 width="250" height="250"></a>
                 <form action = "https://msuspartans.com/sports/football/schedule/2023">
                 <button type="submit" class="color-change-button">
@@ -65,7 +86,7 @@
             </form>
         </div>
         <div class = "picturetwo">
-                <a href = "https://mgoblue.com/sports/football/schedule" target="_blank"><img class= "michigan" src="imgs/sports-teams/michigan.png" alt="Michigan University" width="250" height= "250">
+                <a href = "https://mgoblue.com/sports/football/schedule" target="_blank"><img class= "michigan" src="imgs/sports-teams/michigan.webp" alt="Michigan University" width="250" height= "250">
                 <form action = "https://mgoblue.com/sports/football/schedule"></a>
                     <button type="submit" class="color-change-button">
                         CALENDAR
@@ -73,7 +94,7 @@
                 </form>
         </div>
         <div class="pictureseven">
-            <a href = "https://emueagles.com/sports/football/schedule/2023" target="_blank"><img class="eastern" src="imgs/sports-teams/eastern.png" alt="Eastern Michigan University" width="250" height="250"></a>
+            <a href = "https://emueagles.com/sports/football/schedule/2023" target="_blank"><img class="eastern" src="imgs/sports-teams/eastern.webp" alt="Eastern Michigan University" width="250" height="250"></a>
             <form action="https://emueagles.com/sports/football/schedule/2023">
                 <button type="submit" class="color-change-button">
                     CALENDAR
@@ -81,7 +102,7 @@
             </form>
         </div>
         <div class="pictureeight">
-            <a href = "https://wmubroncos.com/sports/football/schedule" target="_blank"><img class="western" src="imgs//sports-teams/Western_Michigan.png" alt="Western Michigan University" width="250" height="250"></a>
+            <a href = "https://wmubroncos.com/sports/football/schedule" target="_blank"><img class="western" src="imgs//sports-teams/Western_Michigan.webp" alt="Western Michigan University" width="250" height="250"></a>
             <form action="https://wmubroncos.com/sports/football/schedule">
                 <button type="submit" class="color-change-button" >
                     CALENDAR
