--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link href="style.css" rel="stylesheet">
         <link rel = "stylesheet" href = "menu.css">
+        <script src="hamburger.js"></script>
 
         <title>Menu - Game Day Grill: Burgers & More</title>
         <meta name="title" content="Game Day Grill: Burgers & More" />
@@ -21,31 +22,38 @@
         <!-- <meta property="og:url" content="https://metatags.io/" /> -->
         <meta property="og:title" content="Game Day Grill: Burgers & More" />
         <meta property="og:description" content="Order online, view our menu, and learn more about Game Day Grill through our website!" />
-        <!-- <meta property="og:image" content="https://metatags.io/images/meta-tags.png" /> -->
+        <!-- <meta property="og:image" content="https://metatags.io/images/meta-tags.webp" /> -->
         
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
         <!-- <meta property="twitter:url" content="https://metatags.io/" /> -->
         <meta property="twitter:title" content="Game Day Grill: Burgers & More" />
         <meta property="twitter:description" content="Order online, view our menu, and learn more about Game Day Grill through our website!" />
-        <!-- <meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" /> -->
+        <!-- <meta property="twitter:image" content="https://metatags.io/images/meta-tags.webp" /> -->
     </head>
 
     <body>
       <header>
         <div class="grow">
-            <a id="logoB" href="index.html">
-                <img src = "imgs/logos/game-day-grill-logo-simple2.png" class = "logo">
-            </a>
-            <p class="header-text">Game Day Grill</h1>
+          <a id="logoB" href="index.html">
+            <img src = "imgs\logos\game-day-grill.ico" alt = "Game Day Grill Logo" class = "logo">
+          </a>
+          <p class="header-text">Game Day Grill</h1>
         </div>
-        <div class="spaced-row">
-            <a href="order.html" class="button sm" >Order Now</a>
-            <a href="menu.html" class="button sm">Menu</a>
-            <a href="locations.html" class="button sm">Locations</a>
-            <a href="events.html" class="button sm">Special Events</a>
+        <div class="navbar-buttons spaced-row">
+          <a href="order.html" class="button sm" >Order Now</a>
+          <a href="menu.html" class="button sm">Menu</a>
+          <a href="locations.html" class="button sm">Locations</a>
+          <a href="events.html" class="button sm">Special Events</a>
         </div>
-    </header>
+        <img id="hamburger-button" src="imgs/hamburger.webp">
+        </header>
+      <div id="hamburger-menu">
+        <a href="order.html" class="button sm" >Order Now</a>
+        <a href="menu.html" class="button sm">Menu</a>
+        <a href="locations.html" class="button sm">Locations</a>
+        <a href="events.html" class="button sm">Special Events</a>
+      </div>
         <main>
 
                 <h1 class = "centered-title">OUR MENU</h1>
@@ -74,22 +82,22 @@
                 <div id = "appetizers">
                 <h1 class = "centered-title"><br>APPETIZERS</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">ONION RINGS</span>
+                  <div><span class = "menu-item-subtitle">ONION RINGS</span>
                     <p>A heaping plate of crispy, beer-battered onion rings. Comes with zesty sauce.</p>
                   </div>
-                  <div><span class ="menu-subtitle">WINGS</span>
+                  <div><span class ="menu-item-subtitle">WINGS</span>
                     <p>6pc or 10pc bone-in chicken wings. <br> Served with your choice of sauce: BBQ, Honey BBQ, Buffalo, Garlic Parmesan, Lemon Pepper, Teriyaki, or Plain.</p>
                   </div>
-                  <div><span class ="menu-subtitle">NACHOS</span>
+                  <div><span class ="menu-item-subtitle">NACHOS</span>
                     <p>Comes with melted nacho cheese, sour cream, tomatoes, and your choice of shredded chicken or ground beef. </p>
                   </div>
-                  <div><span class ="menu-subtitle">CHEESE CURDS</span>
+                  <div><span class ="menu-item-subtitle">CHEESE CURDS</span>
                     <p>Delightful, bite-sized nuggets of fresh Wisconsin cheddar cheese.</p>
                   </div>
-                  <div><span class ="menu-subtitle">FRIED PICKLES</span>
+                  <div><span class ="menu-item-subtitle">FRIED PICKLES</span>
                     <p> Dill pickle slices coated in a seasoned batter, then fried to a golden crisp.</p>
                   </div>
-                  <div><span class ="menu-subtitle">SOFT PRETZEL BITES</span>
+                  <div><span class ="menu-item-subtitle">SOFT PRETZEL BITES</span>
                     <p>10 piece soft pretzel bites. Comes with melted nacho cheese.</p>
                   </div>
                 </div>
@@ -99,23 +107,23 @@
               <div id = "burgers">
                 <h1 class = "centered-title"><br>BURGERS</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">CLASSIC CHEESEBURGER</span>
+                  <div><span class = "menu-item-subtitle">CLASSIC CHEESEBURGER</span>
                     <p>A 1/3 pound of fresh ground beef patty with American cheese, tomatoes, lettuce, onion, ketchup, mustard, and pickles, all on a toasted sesame seed bun.</p>
                   </div>
-                  <div><span class ="menu-subtitle">MUSHROOM AND SWISS BURGER</span>
+                  <div><span class ="menu-item-subtitle">MUSHROOM AND SWISS BURGER</span>
                     <p>Fresh ground beef patty burger topped with swiss cheese and sauteed mushrooms.</p>
                    </div>
-                  <div><span class ="menu-subtitle">BBQ BURGER</span>
+                  <div><span class ="menu-item-subtitle">BBQ BURGER</span>
                     <p>A grilled patty topped with bacon, cheddar, caramelized onions, and tangy barbecue sauce in a toasted bun.</p>
                   </div>
-                  <div><span class ="menu-subtitle">SLIDERS</span>
+                  <div><span class ="menu-item-subtitle">SLIDERS</span>
                     <p>All the flavor of our classic burgers, at half the size. Comes in plain, classic cheeseburger, BBQ, veggie, or variety.</p>
                   </div>
-                  <div><span class ="menu-subtitle">CALIFORNIA BURGER</span>
+                  <div><span class ="menu-item-subtitle">CALIFORNIA BURGER</span>
                     <p>Fresh ground beef patty with cheese, tomatoes, lettuce, and avocado with aoli on a toasted brioche bun.
                     </p>
                   </div>
-                  <div><span class ="menu-subtitle">VEGGIE BURGER</span>
+                  <div><span class ="menu-item-subtitle">VEGGIE BURGER</span>
                     <p>A delicious, meat-free take on the classic burger. Made with a fresh vegetable blend with your choice of toppings. </p>
                   </div>
                 </div>
@@ -125,25 +133,25 @@
               <div id = "entrees">
                 <h1 class = "centered-title"><br>ENTREES</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">KABOBS</span>
+                  <div><span class = "menu-item-subtitle">KABOBS</span>
                     <p>Freshly grilled meat and vegetables on a skewer for your sports watching convenience. Comes in chicken, beef, or vegetarian variety. </p>
                   </div>
-                  <div><span class ="menu-subtitle">HOT DOGS</span>
+                  <div><span class ="menu-item-subtitle">HOT DOGS</span>
                     <p>Flame-grilled all beef hot dogs on a toasted bun. Add ketchup, mustard, relish, or onions.
                     </p>
                    </div>
-                  <div><span class ="menu-subtitle">PORK CHOPS</span>
+                  <div><span class ="menu-item-subtitle">PORK CHOPS</span>
                     <p>Two breaded pork chops with your choice of fries or mashed potatoes.</p>
                   </div>
-                  <div><span class ="menu-subtitle">FRIED CHICKEN</span>
+                  <div><span class ="menu-item-subtitle">FRIED CHICKEN</span>
                     <p>Crispy breaded dark and white meat chicken.</p>
                   </div>
-                  <div><span class ="menu-subtitle">TACOS</span>
+                  <div><span class ="menu-item-subtitle">TACOS</span>
                     <p>
                       Hard-shell tacos with spiced ground beef, lettuce, tomato, onion, shredded cheese, and cilantro. 
                     </p>
                   </div>
-                  <div><span class ="menu-subtitle">FISH AND CHIPS</span>
+                  <div><span class ="menu-item-subtitle">FISH AND CHIPS</span>
                     <p>Crispy battered cod filets with seasoned fries. Comes with lemon, tartar sauce, and a dinner roll.  </p>
                   </div>
                 </div>
@@ -154,14 +162,14 @@
                 <h1 class = "centered-title"><br>wings</h1>
                 <h1 class ="centered-subtitle">Sauce options: BBQ, Honey BBQ, Buffalo, Garlic Parmesan, Lemon Pepper, or Teriyaki</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">BONE-IN WINGS</span>
+                  <div><span class = "menu-item-subtitle">BONE-IN WINGS</span>
                     <p>These freshly grilled bone-in wings are a game day grill classic.</p>
                   </div>
-                  <div><span class ="menu-subtitle">BONELESS WINGS</span>
+                  <div><span class ="menu-item-subtitle">BONELESS WINGS</span>
                     <p>All of the flavor, none of the bones. 
                     </p>
                    </div>
-                  <div><span class ="menu-subtitle">CRISPY WINGS</span>
+                  <div><span class ="menu-item-subtitle">CRISPY WINGS</span>
                     <p>Breaded and fried chicken wings.</p>
                   </div>
                 </div>
@@ -171,20 +179,20 @@
               <div id = "drinks">
                 <h1 class = "centered-title"><br>DRINKS</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">ARNOLD PALMER</span>
+                  <div><span class = "menu-item-subtitle">ARNOLD PALMER</span>
                     <p>A sweet blend of iced tea and lemonade.</p>
                   </div>
-                  <div><span class ="menu-subtitle">SPARKLING FRUIT PUNCH</span>
+                  <div><span class ="menu-item-subtitle">SPARKLING FRUIT PUNCH</span>
                     <p>This is not your average fruit punch. This fizzy drink is made with freshly squeezed juice from pineapples, grapes, pears, and cranberries. 
                     </p>
                    </div>
-                  <div><span class ="menu-subtitle">CHERRY LIMEADE</span>
+                  <div><span class ="menu-item-subtitle">CHERRY LIMEADE</span>
                     <p>Tart cherry juice, limeade, and a splash of soda water.</p>
                   </div>
-                  <div><span class ="menu-subtitle">SIGNATURE ROOT BEER</span>
+                  <div><span class ="menu-item-subtitle">SIGNATURE ROOT BEER</span>
                     <p>Our signature root beer has a unique flavor you're sure to remember.</p>
                   </div>
-                  <div class = "grid-wide"><span class ="menu-subtitle">COCA-COLA AND PEPSI PRODUCTS</span>
+                  <div class = "grid-wide"><span class ="menu-item-subtitle">COCA-COLA AND PEPSI PRODUCTS</span>
                     <p>
                       Coca-cola, Diet Coca-Cola, Coke Zero, Fanta, Sprite, Pepsi, Diet Pepsi, Dr Pepper, 7UP, Starry, Mtn Dew. 
                     </p>
@@ -196,27 +204,27 @@
               <div id = "desserts">
                 <h1 class = "centered-title"><br>DESSERTS</h1>
                 <div class="menu-grid">
-                  <div><span class = "menu-subtitle">ICE CREAM</span>
+                  <div><span class = "menu-item-subtitle">ICE CREAM</span>
                     <p>Flavors: Vanilla, Chocolate, Strawberry, Cookie Dough, Cookies and Cream, Caramel, Mint Chocolate Chip, Coffee, 
                       Cake Batter, Blackberry, Coconut, Cherry, Butter Pecan, Rocky Road, Peanut Butter, and Pistachio
                     </p>
                   </div>
-                  <div><span class ="menu-subtitle">MILKSHAKES</span>
+                  <div><span class ="menu-item-subtitle">MILKSHAKES</span>
                     <p>Choose one of our delicious ice cream flavors to blend into a shake! Topped with whipped cream and sprinkles. 
                     </p>
                    </div>
-                  <div><span class ="menu-subtitle">Hot Fudge Brownie</span>
+                  <div><span class ="menu-item-subtitle">Hot Fudge Brownie</span>
                     <p>A gooey chocolate brownie topped with vanilla ice cream.</p>
                   </div>
-                  <div><span class ="menu-subtitle">CREAM PUFF</span>
+                  <div><span class ="menu-item-subtitle">CREAM PUFF</span>
                     <p>Pastry shell filled with sweet whipped cream and topped with powdered sugar. </p>
                   </div>
-                  <div><span class ="menu-subtitle">STRAWBERRY CHEESECAKE</span>
+                  <div><span class ="menu-item-subtitle">STRAWBERRY CHEESECAKE</span>
                     <p>
                       A slice of cheesecake topped with fresh strawberries and strawberry syrup.
                     </p>
                   </div>
-                  <div><span class ="menu-subtitle">BANANA SPLIT</span>
+                  <div><span class ="menu-item-subtitle">BANANA SPLIT</span>
                     <p>3 scoops of any ice cream flavor, topped with chocolate drizzle, 
                       strawberry and pineapple syrup, whipped cream, chopped nuts, cherries, and the banana, of course.</p>
                   </div>
@@ -224,7 +232,7 @@
                 </div>
         </main>
         <footer class = "footer-grid">
-          <!-- <img src = "imgs/game-day-grill-logo-simple2.png" class = "footer-logo"> -->
+          <!-- <img src = "imgs/game-day-grill-logo-simple2.webp" class = "footer-logo"> -->
           <div class = "centered-title">
           <h1>GAME DAY GRILL</h1>
 
@@ -255,7 +263,7 @@
               target="_blank" class = "contact">5055 Delemere Ave, Royal Oak, MI 48073</a></strong>
 
           </div>
-          <div class = "centered-title">
+          <div class = "centered-title Cinfo">
               <h1 class = "contact">CHAPTER INFORMATION: </h1>
               <p class = "contact">Team Members: Sarah Phillips, Isaac Hatfield, Owen Murray, Tatyana Anissimov <br>
               Theme: Sieze the Opportunity<br>
