home page reassembly going well

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     </head>
 
     <body>
-        <header class="full-width sm-padding row sm-gap fixed border-sizing">
+        <header class="full-width sm-padding row sm-gap fixed border-sizing bg-secondary flex-nah y-center">
             <a class="full-height" href="index.html">
                 <img src="imgs\logos\game-day-grill-logo-cropped.png" class="full-height" alt="Game Day Grill Logo">
             </a>
-            <p class="heading lg-text grow">Game Day Grill</h1>
+            <span class="heading md-text grow">Game Day Grill</span>
             <div class="row sm-gap">
                 <a href="order.html" class="button">Order Now</a>
                 <a href="menu.html" class="button">Menu</a>
@@ -59,21 +59,66 @@
             </div>
     	</header>
           
-        <main id="main">
-            <div id="presented">
-                <div class="left-half-center">
-                    <div class="presented-text">
-                        <p class="lg">Great Food. Great Drinks.</p>
-                        <p class="sm">See what makes us special. Visit our restaurants or order online today!</p>
-                        <div class="spaced-row margin-top">
-                            <a href="order.html" class="button sm">Order Now</a>
-                            <a href="locations.html" class="button sm">Locations</a>
+        <main id="main" class="y-center column full-width sm-gap">
+            <div id="greeting" class="full-width">
+                <div class="hw-container full-height xy-center">
+                    <div id="greeting-text" class="content-container">
+                        <span class="lg-text heading">Great Food. Great Drinks.</span>
+                        <span class="sm-text">See what makes our locations so popular. Visit our restaurants or order online today!</span>
+                        <div class="row sm-gap">
+                            <a href="order.html" class="button">Order Now</a>
+                            <a href="locations.html" class="button">Locations</a>
                         </div>
                     </div>
                 </div>
             </div>
 
+			<div class="column sm-gap mc-container">
+				<span class="lg-text heading text-center">HOURS</span>
 
+				<div class="card row sm-gap">
+					<span class="sm-text hw-container">From noon till midnight, our doors are open, ready to serve you and your party! Join us here at GDG at our listed hours, where the action on the field meets the sizzle on our grills.</span>
+					<div class="content-container">
+						<span class="md-text">HOURS OF OPERATION:</span>
+						<span class="sm-text">Mon - Fri: 12:00PM - 12:00AM</span>
+						<span class="sm-text">Sat-Sun: 12:00PM - 12:00AM</span>
+						<span class="md-text">HOLIDAY HOURS:</span>
+						<span class="sm-text">NEW YEARS DAY: CLOSED</span>
+						<span class="sm-text">EASTER: CLOSED</span>
+						<span class="sm-text">INDEPENDENCE DAY: 12PM - 12AM</span>
+						<span class="sm-text">LABOR DAY: 12PM - 12AM</span>
+						<span class="sm-text">THANKSGIVING: CLOSED</span>
+						<span class="sm-text">CHRISTMAS EVE: 12PM - 5PM</span>
+						<span class="sm-text">CHRISTMAS DAY: CLOSED</span>
+						<span class="sm-text">NEW YEARS EVE: 12PM - 2AM</span>
+					</div>
+				</div>
+
+				<span class="lg-text heading text-center">REVIEWS</span>
+
+				<div class="row sm-gap">
+					<div class="card g-s-padding content-container tw-container border-sizing">
+						<span class="md-text">GREAT ICE CREAM</span>
+						<span class="sm-text no-select">&bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</span>
+						<span class="sm-text">Joe B.</span>
+						<span class="sm-text">The variety of ice cream flavors is just splended at GDG. I really like the mint chocolate chip flavor myself.</span>
+					</div>
+
+					<div class="card g-s-padding content-container tw-container border-sizing">
+						<span class="md-text">MY FAV SPORTS GRILL</span>
+						<span class="sm-text no-select">&bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</span>
+						<span class="sm-text">Jedidiah S.</span>
+						<span class="sm-text">The staff at Game Day keep me coming back! Kathy was a great server and the food was awesome. Looking forward to coming back, I'll make a reservation through their website soon!</span>
+					</div>
+
+					<div class="card g-s-padding content-container tw-container border-sizing">
+						<span class="md-text">BEST HANGOUT SPOT</span>
+						<span class="sm-text no-select">&bigstar; &bigstar; &bigstar; &bigstar; &bigstar;</span>
+						<span class="sm-text">Michael P.</span>
+						<span class="sm-text">Favorite place to watch sports with my buddies, especially with the crazy good drinks and apps they serve. Thought I'd leave a review after constant great service.</span>
+					</div>
+				</div>
+			</div>
 
 
 
