--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="imgs\logos\game-day-grill-logo-cropped.png" class="full-height" alt="Game Day Grill Logo">
             </a>
             <span class="heading md-text grow">Game Day Grill</span>
-            <div class="row sm-gap">
+            <div class="row sm-gap button-translate">
                 <a href="order.html" class="button">Order Now</a>
                 <a href="menu.html" class="button">Menu</a>
                 <a href="locations.html" class="button">Locations</a>
