--- a/Locations.html
+++ b/Locations.html
@@ -132,7 +132,7 @@
                       <li> | </li>
                       <li><a href = "events.html">SPECIAL EVENTS</a></li>
                       <li> | </li>
-                      <li><a href = "sports.html">SPORTS CALENDARS</a></li>
+                      <li><a href = "Sports.html">SPORTS CALENDARS</a></li>
                   
                   </ul>
               <a href = "tel:2485550127" class = "contact">(248)-555-0127</a>
